style: 增加注释(编码, NN, 渲染管线)

--- a/notes/0001-NeRF.md
+++ b/notes/0001-NeRF.md
@@ -98,6 +98,28 @@ $$
 
 良好的实验效果
 
+
+
+### 实现相关
+
+#### 全连接层网络结构
+
+> Appendix A
+
+<img src="https://user-images.githubusercontent.com/30110832/180136309-32c2f293-8ce5-4591-bdaa-2cb76d5611b9.png" alt="全连接层网络结构" style="zoom:67%;" />
+
+* 黑实线=ReLU激活函数；橘色=无激活函数；黑虚线=sigmoid函数
+
+* 参照DeepSDF，包含了一个**skip connection**，在第五层采用**Concatenation**再次处理输入（但Mip-NeRF指出这个identity concatenation在网络速度和表现上意义不大）
+
+* 额外的一层输出体密度 $\sigma$ ，用ReLU保证非负；这一层的特征向量还concatenate 24维的输入观测方向 $\gamma(d)$ 
+
+* 最后用一层128维处理并得到位置x、观测方向d处的RGB **radiance**
+
+
+
+
+
 ### 参考
 
 [0] NeRF主页、Code
@@ -121,3 +143,23 @@ $$
 [4] 实时体渲染（一本书的翻译，推导很基础）
 
 > https://zhuanlan.zhihu.com/p/260540982
+
+[5] 量子位
+
+> https://zhuanlan.zhihu.com/p/128554388
+
+
+
+#### 代码/实现相关
+
+[1] Skip Connection解析
+
+> https://zhuanlan.zhihu.com/p/457590578
+
+[2] 摄影参数渲染（关于Focal Length的含义）
+
+> https://zhuanlan.zhihu.com/p/23827065
+
+[3] 逆深度 **Inverse Depth**
+
+> https://zhuanlan.zhihu.com/p/94380129
