style: 增加注释(train, run)

--- a/notes/0001-NeRF.md
+++ b/notes/0001-NeRF.md
@@ -34,19 +34,21 @@
 观测光线 $\mathbf{r}(t)=\mathbf{o}+t\mathbf{d}$ ，bound上下限距离 $t_n$ （近）、最远距离 $t_f$ ，对应的颜色 $C(\mathbf{r})$ 为：
 $$
 C(\mathbf{r})=\int_{t_n}^{t_f}T(t)\sigma(\mathbf{r}(t))\mathbf{c}(\mathbf{r}(t),\mathbf{d})dt\\
-T(t)=\exp{(-\int_{t_n}^t\sigma(\mathbf{r}(s))ds}
+T(t)=\exp\left(-\int_{t_n}^t\sigma(\mathbf{r}(s)\right)ds
 $$
 体渲染公式理解：射线路径上所有点所辐射的颜色达到该平面的累积
 
-* $\sigma(\mathbf{r}(t))$ 为射线上某点体密度
+* $\sigma(\mathbf{r}(t))$ 为射线上某点体密度，理解为射线在位置x处一无穷小颗粒处终止的微分概率
 * $\mathbf{c}(\mathbf{r}(t),\mathbf{d}) $ 为该点颜色辐射，递归调用的NeRF预测值，r、d是两个输入参数
-* $T$ 为起始点到时间 $t$ 对应点的衰减系数
+* $T(t)$ 为起始点 $t_n$ 到时间 $t$ 的累计光透射率，即路程中未碰撞到其它粒子的概率
 
 实际中采样N的点，上式离散形式写为：
 $$
-C(\mathbf{r})=\sum_{i=1}^NT_i(1-\exp{(-\sigma_i\delta_i))}\mathbf{c}_idt\\
-T(t)=\exp{(-\sum_{j=1}^{i-1}\sigma_j\delta_j)}
+C(\mathbf{r})=\sum_{i=1}^NT_i(1-\exp(-\sigma_i\delta_i))\mathbf{c}_i\\
+T_i=\exp\left(-\sum_{j=1}^{i-1}\sigma_j\delta_j\right)
 $$
+
+* $\delta_i=t_{i+1}-t_i$ 为相邻采样点之间距离
 
 #### 补充
 
