--- a/notebooks/git_clone_check.ipynb
+++ b/notebooks/git_clone_check.ipynb
@@ -122,7 +122,36 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##sh安装kaolin测试"
+        "## 杂鱼测试"
+      ],
+      "metadata": {
+        "id": "ACuWTtfGu3n1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TPU&cuda尝试（看起来不大行）"
+      ],
+      "metadata": {
+        "id": "ytN5Az55gXhU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "dEhA_lYTgaal"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "sh安装kaolin测试"
       ],
       "metadata": {
         "id": "vTmy_uv5NjMK"
@@ -131,7 +160,15 @@
     {
       "cell_type": "code",
       "source": [
-        "!sh install_kaolin.sh"
+        "#!sh install_kaolin.sh\n",
+        "# 不需要，如下即可\n",
+        "import os\n",
+        "path=\"/content/drive/MyDrive/NeuralRecon-W-test/kaolin\"\n",
+        "os.chdir(path)\n",
+        "%env IGNORE_TORCH_VER=1\n",
+        "!python setup.py develop\n",
+        "path=\"/content/drive/MyDrive/NeuralRecon-W-test\"\n",
+        "os.chdir(path)"
       ],
       "metadata": {
         "id": "lsfi0yVPNnO6"
@@ -163,7 +200,7 @@
         "id": "fOWLScYnnU-E",
         "outputId": "372bf75e-2596-4fb3-b081-239fc9844fa8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
