--- a/notebooks/NeRF_OSR_test.ipynb
+++ b/notebooks/NeRF_OSR_test.ipynb
@@ -38,13 +38,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "q0lpzDY83qLq",
-        "outputId": "56b6e2e3-688b-4fa3-a339-90bb0b3200df"
+        "outputId": "6a6ddb8f-7e7b-4dca-bff4-1683bd129a2f"
       },
       "outputs": [
         {
@@ -83,11 +83,12 @@
               " 'configs',\n",
               " 'camera_inspector',\n",
               " 'logs',\n",
-              " 'data']"
+              " 'data',\n",
+              " '__pycache__']"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         }
       ],
       "source": [
@@ -133,7 +134,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1b11a44-120c-4787-9cd4-1a68e79a4ef0"
+        "outputId": "23590819-e506-4d02-9a4a-ed29f8dd8538"
       },
       "execution_count": null,
       "outputs": [
@@ -141,8 +142,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "shell-init: error retrieving current directory: getcwd: cannot access parent directories: No such file or directory\n",
-            "Sat Aug  6 04:25:05 2022       \n",
+            "Mon Aug  8 04:13:22 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -151,7 +151,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   51C    P0    34W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
+            "| N/A   35C    P0    27W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -207,26 +207,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lUEUgum7dj-1",
-        "outputId": "59652eb5-445e-4c18-8533-5120b2f35df4"
+        "outputId": "fa37e93e-5e2d-4af9-ed41-663dd504fa04"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: tensorboardX==2.1 in /usr/local/lib/python3.7/dist-packages (2.1)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from tensorboardX==2.1) (1.15.0)\n",
+            "Collecting tensorboardX==2.1\n",
+            "  Downloading tensorboardX-2.1-py2.py3-none-any.whl (308 kB)\n",
+            "\u001b[K     |████████████████████████████████| 308 kB 3.9 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from tensorboardX==2.1) (1.15.0)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from tensorboardX==2.1) (1.21.6)\n",
             "Requirement already satisfied: protobuf>=3.8.0 in /usr/local/lib/python3.7/dist-packages (from tensorboardX==2.1) (3.17.3)\n",
+            "Installing collected packages: tensorboardX\n",
+            "Successfully installed tensorboardX-2.1\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting configargparse==1.2.3\n",
             "  Downloading ConfigArgParse-1.2.3.tar.gz (42 kB)\n",
-            "\u001b[K     |████████████████████████████████| 42 kB 1.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 42 kB 945 kB/s \n",
             "\u001b[?25hBuilding wheels for collected packages: configargparse\n",
             "  Building wheel for configargparse (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for configargparse: filename=ConfigArgParse-1.2.3-py3-none-any.whl size=19344 sha256=e1e30f7e1f2763b479f0949f56702bcbdc106d46e0280fca95dd7a093ec863e9\n",
+            "  Created wheel for configargparse: filename=ConfigArgParse-1.2.3-py3-none-any.whl size=19344 sha256=3f100417c99b717b222fe5a06d8f18f3ce1251b054b70a8ad25dcaf943a9874c\n",
             "  Stored in directory: /root/.cache/pip/wheels/8c/56/a5/1c051b2cca57d199fc048e2516424f24263cefd3ec2059990e\n",
             "Successfully built configargparse\n",
             "Installing collected packages: configargparse\n",
@@ -263,15 +267,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8Rf_6Bc0baB_",
-        "outputId": "802e5425-a7b9-408e-b351-eb4c7a49eaec"
+        "outputId": "ae96f1c8-f226-42df-9822-eb8cbd2b6fc0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2022-08-06 14:05:03,360 [INFO] root: Command Line Args:   --config configs/trevi/final.txt\n",
+            "2022-08-08 04:16:05,078 [INFO] root: Command Line Args:   --config configs/trevi/final.txt\n",
             "Config File (configs/trevi/final.txt):\n",
             "  datadir:           data/trevi\n",
             "  scene:             final_clean\n",
@@ -313,16 +317,18 @@
             "  --world_size:      -1\n",
             "  --lambda_autoexpo: 1.0\n",
             "\n",
-            "2022-08-06 14:05:03,360 [INFO] root: Using # gpus: 1\n",
-            "2022-08-06 14:05:04,857 [INFO] root: gpu_mem: 17071734784\n",
-            "2022-08-06 14:05:04,858 [INFO] root: setting batch size according to 12G gpu\n",
-            "2022-08-06 14:05:15,168 [INFO] root: raw intrinsics_files: 1407\n",
-            "2022-08-06 14:05:15,168 [INFO] root: raw pose_files: 1407\n",
-            "2022-08-06 14:05:21,329 [INFO] root: raw img_files: 1407\n",
-            "2022-08-06 14:05:21,374 [INFO] root: raw mask_files: 1407\n",
+            "2022-08-08 04:16:05,079 [INFO] root: Using # gpus: 1\n",
+            "2022-08-08 04:16:07,056 [INFO] root: gpu_mem: 17071734784\n",
+            "2022-08-08 04:16:07,056 [INFO] root: setting batch size according to 12G gpu\n",
+            "2022-08-08 04:16:18,022 [INFO] root: raw intrinsics_files: 1407\n",
+            "2022-08-08 04:16:18,023 [INFO] root: raw pose_files: 1407\n",
+            "2022-08-08 04:16:23,475 [INFO] root: raw img_files: 1407\n",
+            "2022-08-08 04:16:23,568 [INFO] root: raw mask_files: 1407\n",
             "Traceback (most recent call last):\n",
             "  File \"ddp_train_nerf.py\", line 750, in <module>\n",
+            "    train()\n",
             "  File \"ddp_train_nerf.py\", line 745, in train\n",
+            "    join=True)\n",
             "  File \"/usr/local/lib/python3.7/dist-packages/torch/multiprocessing/spawn.py\", line 240, in spawn\n",
             "    return start_processes(fn, args, nprocs, join, daemon, start_method='spawn')\n",
             "  File \"/usr/local/lib/python3.7/dist-packages/torch/multiprocessing/spawn.py\", line 198, in start_processes\n",
