--- a/notebooks/unzipfile.ipynb
+++ b/notebooks/unzipfile.ipynb
@@ -42,7 +42,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XXtgMy_i1oIC",
-        "outputId": "32cf3c4e-4e7c-42e1-ce86-051c0a10fa77"
+        "outputId": "dde39054-ff61-4f6f-8fbc-7b104bd14a86"
       },
       "outputs": [
         {
@@ -13054,7 +13054,7 @@
         "id": "eAo2v1cmY8pt",
         "outputId": "f570e247-d130-437c-f60e-0a331cc69db5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13083,6 +13083,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# nerfw"
+      ],
+      "metadata": {
+        "id": "joaUPU8Wz6k1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cp -r '/gdrive/My Drive/NeuralRecon-W-test/data/heritage-recon/brandenburg_gate/' '/gdrive/My Drive/nerf_pl-nerfw/data/heritage-recon/'"
+      ],
+      "metadata": {
+        "id": "b-fSac3duwFf"
+      },
+      "execution_count": 6,
+      "outputs": []
     }
   ]
 }
